@@ -1,3 +1,11 @@
+From: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date: Sat May 18 10:36:30 2013 +0900
+Subject: aufs3.x-rcN-20130520
+Origin: http://sourceforge.net/p/aufs/aufs3-standalone/ci/4f14cef47eb7c23eda7198931fbab1040866b6ee/tree/
+Bug-Debian: http://bugs.debian.org/541828
+
+Patch generated by debian/patches/features/all/aufs3/gen-patch
+
 --- a/Documentation/ABI/testing/debugfs-aufs	1970-01-01 01:00:00.000000000 +0100
 +++ b/Documentation/ABI/testing/debugfs-aufs	2013-06-02 18:23:34.749538984 +0100
 @@ -0,0 +1,50 @@
